src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Last_Portal_Login__c</fullName>
        <label>Last Portal Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lic_HELO_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lic HELO State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loans_Last_Month__c</fullName>
        <label>Loans Last Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Non Premier</fullName>
                    <default>true</default>
                    <label>Non Premier</label>
                </value>
                <value>
                    <fullName>Premier Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <formula>Primary_contact_name__r.Email</formula>
        <label>Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminated_Date__c</fullName>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_Exclusionary_List__c</fullName>
        <label>What Exclusionary List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QLMS</fullName>
                </value>
                <value>
                    <fullName>ORMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Recertification_Date__c</fullName>
        <formula>IF(ISBLANK( Next_Renewal_Date__c ),Original_Approved_Date__c +365,Next_Renewal_Date__c + 365)</formula>
        <label>Next Recertification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <description>The date of this Approved Partner's next renewal date.</description>
        <inlineHelpText>The date of this Approved Partner's next renewal date.</inlineHelpText>
        <label>Last Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AE_Partner_Type__c</fullName>
        <label>AE Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Non Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ORM Account Executive Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Account Executive/PCS</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>DMB - Jesse, DMB - Josh</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>wORMS, Braveheart</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Closed_Loans__c</fullName>
        <description>Loans Closed by Partner</description>
        <inlineHelpText>Loans Closed by Partner</inlineHelpText>
        <label>Partner Closed Loans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMS_Account_Executive__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>QLMS Account Executive</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QLMS_AE__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QLMS_AE__c</referenceTo>
        <relationshipLabel>Related Business Partners</relationshipLabel>
        <relationshipName>QLMS_AE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SoCal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SoCal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_QLMS_AE_Payout__c</fullName>
        <formula>IF(ISBLANK(QLMS_Account_Executive__c), 0,
IF(ISBLANK( Original_Approved_Date__c),0, 
IF( Partner_Closed_Loans__c == 1, 250,
IF( Partner_Closed_Loans__c == 2, 500,
IF( Partner_Closed_Loans__c == 3, 750,
IF( Partner_Closed_Loans__c == 4, 1000,
IF( Partner_Closed_Loans__c &gt;= 5, 1250,0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Money earned by QLMS AE</inlineHelpText>
        <label>Total QLMS AE Payout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scouting_Report__c</fullName>
        <formula>HYPERLINK("https://app.powerbi.com/groups/me/apps/8429e94f-cf27-4c02-84b8-65f4eed64285/reports/cc05dfdc-4cc3-46a5-86e8-f2bd11e4e6d1/ReportSection2dc0351f9c432b9c0997?filter=vwMarketTrac_BLD~2FActual_x0020_Company_x0020_NMLS_x0020_Id eq '"&amp;Company_NMLS_ID__c &amp;"'" ,"Scouting Report")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scouting Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_sign_Addendum_Provider__c</fullName>
        <label>E-sign Addendum Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>E_Sign_Addendum</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <label>Approval Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Company Closed</fullName>
                </value>
                <value>
                    <fullName>Denied by Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Excluded Partner</fullName>
                </value>
                <value>
                    <fullName>Terminated (DTRT)</fullName>
                </value>
                <value>
                    <fullName>Terminated (Leadership Request)</fullName>
                </value>
                <value>
                    <fullName>Terminated (Non-renewal)</fullName>
                </value>
                <value>
                    <fullName>Terminated (Performance)</fullName>
                </value>
                <value>
                    <fullName>Terminated (Production)</fullName>
                </value>
                <value>
                    <fullName>Withdrawn by Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QLMS_CommonID__c</fullName>
        <formula>QLMS_Account_Executive__r.Common_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLMS_CommonID</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>Account_Compact_Layout</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AE_Docs_Needed</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Partner_Onboarding_Status__c</columns>
        <columns>App_Received__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Documents_Required_Date__c</columns>
        <columns>Docs_Needed_Days__c</columns>
        <columns>Account_Executive_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Partner_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Documents Required</value>
        </filters>
        <label>AE Docs Needed</label>
    </listViews>
    <listViews>
        <fullName>My_Outstanding_Accounts</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Partner_Onboarding_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>App_Sent__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:5</value>
        </filters>
        <filters>
            <field>Partner_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>App Outstanding</value>
        </filters>
        <filters>
            <field>App_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Partner_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>App Ready</value>
        </filters>
        <label>My Outstanding Accounts or Apps Not Sent</label>
    </listViews>
    <listViews>
        <fullName>Not_Interested_Partner_Leads</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Onboarding_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>Withdrawn</value>
        </filters>
        <label>Withdrawn Partners</label>
    </listViews>
    <listViews>
        <fullName>AE_Apps_Out</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Partner_Onboarding_Status__c</columns>
        <columns>App_Sent__c</columns>
        <columns>Outstanding_Days__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>QLMS_Account_Executive__c</columns>
        <columns>Primary_Contact_Email__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Partner_Onboarding_Status__c</field>
            <operation>equals</operation>
            <value>App Outstanding</value>
        </filters>
        <label>AE Apps Out</label>
    </listViews>
    <listViews>
        <fullName>Accounts_w_o_WTD_Call_Logged</fullName>
        <booleanFilter>(1 OR 3) AND 2 AND (4 OR 5) AND 6</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Approval_Sub_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Last_Call__c</columns>
        <columns>Account_Called_This_Week__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Last_Call__c</field>
            <operation>lessOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Account_Called_This_Week__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Last_Call__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Approval_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Potential_Partners</value>
        </filters>
        <filters>
            <field>Approval_Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>Denied by Credit Risk,Terminated (Production),Terminated (Leadership Request),Terminated (DTRT),Terminated (Performance),Withdrawn by Partner,Excluded Partner,Company Closed</value>
        </filters>
        <label>Accounts w/o WTD Call Logged</label>
        <sharedTo>
            <role>Account_Executive</role>
            <role>Account_Executive_Lead</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>QLMS_Account_Executive__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Onboarding_Status__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Account_Executive_Name__c</columns>
        <columns>Assigned_Credit_Risk_Analyst__c</columns>
        <columns>Assigned_PCS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_user_is_Assigned_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Business Partners</label>
        <sharedTo>
            <role>Account_Executive</role>
            <role>Account_Executive_Lead</role>
            <role>Client_Care_Specialist</role>
            <role>Client_Care_Specialist_Lead</role>
            <role>Credit_Risk_Analyst</role>
            <role>Inside_Account_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Preferred_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Contacts_Count__c</columns>
        <columns>Last_Call__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AE_Partner_Type__c</field>
            <operation>equals</operation>
            <value>Preferred</value>
        </filters>
        <filters>
            <field>Approval_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Preferred Accounts</label>
        <sharedTo>
            <role>DMB_Josh</role>
            <role>wORMS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>QLMS_Account_Executive__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approval_Sub_Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Original_Approved_Date__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Email__c</columns>
        <columns>Last_Portal_Login__c</columns>
        <columns>Loans_Last_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Partner_Leads</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Holding_Company_Federal_Tax_ID_Number_EI__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Account_Executive_Name__c</columns>
        <columns>QLMS_Account_Executive__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Partner_Onboarding_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Potential_Partners</value>
        </filters>
        <label>All Potential Partners</label>
    </listViews>
    <recordTypes>
        <fullName>Approved_Partners</fullName>
        <active>true</active>
        <label>Approved Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Committed_Partner</fullName>
        <active>true</active>
        <label>Committed Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Leads</fullName>
        <active>true</active>
        <label>Partner Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partners</fullName>
        <active>true</active>
        <label>Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Potential_Partners</fullName>
        <active>true</active>
        <label>Potential Partners</label>
    </recordTypes>
    <validationRules>
        <fullName>AE_Account_Stage_Change</fullName>
        <active>true</active>
        <description>AE's cannot change the Account stage after App Pending Review</description>
        <errorConditionFormula>AND( $UserRole.Name = 'Account Executive', RecordType.Name = 'Potential Partners', ISCHANGED(Partner_Onboarding_Status__c), 
OR( 
ISPICKVAL(Partner_Onboarding_Status__c, 'Reviewing Docs'), 
ISPICKVAL(Partner_Onboarding_Status__c, 'Documents Required'), 
ISPICKVAL(Partner_Onboarding_Status__c, 'Escalated Review'), 
ISPICKVAL(Partner_Onboarding_Status__c, 'Pending Seasoning'), 
ISPICKVAL(Partner_Onboarding_Status__c, 'App Complete/Approved'), 
ISPICKVAL(Partner_Onboarding_Status__c, 'App Complete/Denied'), 
ISPICKVAL(Partner_Onboarding_Status__c, 'Withdrawn') 
) 
)</errorConditionFormula>
        <errorMessage>You do not have access to update this stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assigned_CRA</fullName>
        <active>true</active>
        <description>Assigned CRA cannot be blank if Lead Status is In process</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Partner_Lead_Status__c , 'In-Process'),
  ISBLANK(Assigned_Credit_Risk_Analyst__c)  
)</errorConditionFormula>
        <errorDisplayField>Assigned_Credit_Risk_Analyst__c</errorDisplayField>
        <errorMessage>Please update Kelly Moreno as the Assigned CRA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HoldingCompanyFederalFiledvalidationrule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Holding_Company_Name__c)), ISBLANK( Holding_Company_Federal_Tax_ID__c ))</errorConditionFormula>
        <errorDisplayField>Holding_Company_Federal_Tax_ID__c</errorDisplayField>
        <errorMessage>Fill Holding Company Federal Tax ID Number/EI Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_fill_Other_Reason</fullName>
        <active>true</active>
        <description>Must fill other Reason if the Reason for not being interested is selected as 'Other'</description>
        <errorConditionFormula>ISPICKVAL( Reason_for_Not_being_Interested__c ,'Other')&amp;&amp; 
ISBLANK( Other_Reason__c )</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>Must fill other Reason if the Reason for not being interested is selected as 'Other'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_select_States_to_do_business_in</fullName>
        <active>true</active>
        <description>Must select the states Partners wants to do Business in if the Reason for not being interested is 'States Available	'</description>
        <errorConditionFormula>ISPICKVAL( Reason_for_Not_being_Interested__c ,'States Available')&amp;&amp; 
ISBLANK( States_they_would_like_to_do_Business_in__c )</errorConditionFormula>
        <errorDisplayField>States_they_would_like_to_do_Business_in__c</errorDisplayField>
        <errorMessage>Must select the states Partners wants to do Business in if the Reason for not being interested is 'States Available	'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_ways_to_obtain_leads_for_partner</fullName>
        <active>true</active>
        <description>Please fill "Other source to obtain leads' textbox if Other is selected as choice in 'How does partner obtain leads?' field</description>
        <errorConditionFormula>Includes(  How_does_partner_obtain_leads__c  , 'Other')&amp;&amp; ISBLANK( Other_source_to_obtain_leads__c  )</errorConditionFormula>
        <errorDisplayField>Other_source_to_obtain_leads__c</errorDisplayField>
        <errorMessage>Please fill "Other source to obtain leads' textbox if Other is selected as choice in 'How does partner obtain leads?' field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Denial_Reasons</fullName>
        <active>true</active>
        <description>Must choose a partner denial reason if the Partner Lead Status is Denied</description>
        <errorConditionFormula>ISPICKVAL(Partner_Lead_Status__c,'Denied')&amp;&amp;
 ISBLANK(Partner_Denial_Reasons__c)</errorConditionFormula>
        <errorMessage>Please choose Partner Denial Reason(s)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone10DigitNumber</fullName>
        <active>false</active>
        <errorConditionFormula>OR(NOT(REGEX(Main_Phone__c,"(\\d){10}")), IF( LEFT( Main_Phone__c, 1) == '0' , true,false))</errorConditionFormula>
        <errorMessage>Phone number must Contain 10 digits number,and should not start with 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QLMS_AE_Email</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
NOT(ISBLANK(QLMS_Account_Executive__c   )) ,
ISPICKVAL(Partner_Lead_Status__c , 'Prospect'),
ISCHANGED(Partner_Lead_Status__c),
ISBLANK(QLMS_Account_Executive__r.Email__c )),
AND(
NOT(ISBLANK(QLMS_Account_Executive__c   )) ,
ISPICKVAL(Partner_Lead_Status__c , 'App Sent'),
ISCHANGED(Partner_Lead_Status__c),
ISBLANK(QLMS_Account_Executive__r.Email__c )),
AND(
NOT(ISBLANK(QLMS_Account_Executive__c   )) ,
ISPICKVAL(Partner_Lead_Status__c , 'Processing'),
ISCHANGED(Partner_Lead_Status__c),
ISBLANK(QLMS_Account_Executive__r.Email__c )),
AND(
NOT(ISBLANK(QLMS_Account_Executive__c   )) ,
ISPICKVAL(Partner_Lead_Status__c , 'Approved'),
ISCHANGED(Partner_Lead_Status__c),
ISBLANK(QLMS_Account_Executive__r.Email__c )),
AND(
NOT(ISBLANK(QLMS_Account_Executive__c   )) ,
ISPICKVAL(Partner_Lead_Status__c , 'Not Interested'),
ISCHANGED(Partner_Lead_Status__c),
ISBLANK(QLMS_Account_Executive__r.Email__c )),
AND(
NOT(ISBLANK(QLMS_Account_Executive__c   )) ,
ISPICKVAL(Partner_Lead_Status__c , 'Denied'),
ISCHANGED(Partner_Lead_Status__c),
ISBLANK(QLMS_Account_Executive__r.Email__c ))
)</errorConditionFormula>
        <errorDisplayField>QLMS_Account_Executive__c</errorDisplayField>
        <errorMessage>Please update the Email address for this QLMS AE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Not_being_interested</fullName>
        <active>true</active>
        <description>Must pick a reason for Partner not being interested</description>
        <errorConditionFormula>ISPICKVAL(Partner_Lead_Status__c,'Not Interested')&amp;&amp; 
ISBLANK( Text(Reason_for_Not_being_Interested__c ))</errorConditionFormula>
        <errorDisplayField>Reason_for_Not_being_Interested__c</errorDisplayField>
        <errorMessage>Must pick a reason for Partner not being interested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Source_Name_validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( AccountSource , 'Other'), ISBLANK( Source_Name__c ))</errorConditionFormula>
        <errorMessage>Source Name Filed is mandatory for Partner lead source as 'Other'</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subsidiary_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Type_of_Institution__c , 'Subsidiary'), ISBLANK( Subsidiary__c ))</errorConditionFormula>
        <errorMessage>Subsidiary field is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trade_Show_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( AccountSource , 'TradeShow'), ISBLANK( Trade_Show__c ))</errorConditionFormula>
        <errorMessage>Field is mandatory for Partner Lead Source as TradeShow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cellmustcontain10numbers</fullName>
        <active>false</active>
        <errorConditionFormula>OR(NOT(REGEX(Cell__c,"(\\d){10}")), IF( LEFT( Cell__c, 1) == '0' , true,false))</errorConditionFormula>
        <errorMessage>Cell must contain 10 digits number,and should not start with 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Type_req_for_Approved</fullName>
        <active>true</active>
        <description>Partner type is required for Approved Partners</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = "Partners" , ISPICKVAL(Partner_Type__c,''))</errorConditionFormula>
        <errorDisplayField>Partner_Type__c</errorDisplayField>
        <errorMessage>Please select Partner Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_primary_contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( OR ( ISPICKVAL (  Partner_Onboarding_Status__c  , "App Outstanding" ) ), ISBLANK (   Primary_contact_name__c  ) )</errorConditionFormula>
        <errorDisplayField>Primary_contact_name__c</errorDisplayField>
        <errorMessage>Must have primary contact identified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_primary_contact_email</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( OR ( ISPICKVAL (  Partner_Onboarding_Status__c  , "App Outstanding" ) ), ISBLANK (    Primary_Contact_Email__c   ) )</errorConditionFormula>
        <errorDisplayField>Primary_Contact_Email__c</errorDisplayField>
        <errorMessage>Must have primary contact email identified</errorMessage>
    </validationRules>
</CustomObject>